# website

./: .env.example  .gitignore  AGENTIC-WORKFLOW.md  COMIC-README.md  DEMO.md  DEPLOYMENT.md  LICENSE  Makefile  PROJECT-SUMMARY.md  QUICKSTART.md  README.md  TESTING.md  bun.lockb  bun.lockb.x  comic-ideas.md  index.html  justfile  package-lock.json  package.json  pyproject.toml  schema.sql  setup.sh  tsconfig.json  verify-build.sh  vite.config.ts  wrangler.cron.toml  wrangler.toml
.claude/: settings.local.json
.github/workflows/: autotag.yml  build.yaml
cast/: characters.json  characters.ts
docs/: production-readiness.md  prompt-kinde.md  prompt-typer.md
functions/: _middleware.ts  _worker.js
functions/api/: archive.ts  day.ts  image.ts  push-key.ts  subscribe.ts  test-generate.ts  today.ts  vote.ts  workflow.ts
functions/lib/: agentic-comic-workflow.ts  cast.ts  comic-day-admin.ts  comic-generator.ts  comic-response.ts  encoding.ts  local-bootstrap-comic.ts  runtime-config.ts  svg-renderer.ts  web-push.ts
public/: 2ae0aaee-e2de-45f0-aee2-9f7da77f7c18.glb  COPYRIGHT.txt  PromptExecution1.afdesign  PromptExecution2.afdesign  config.json  e262aede-d5e8-4a33-90f2-1e3e12d58fb1.glb  sample.glb  subtitle-cognitive-process-automation.afdesign  sw.js  title-promptexecution.afdesign
pysrc/evlib/: build.py
pysrc/websockwasm/: build.py  build.py.dontwork
rust/wasm_websocket_client/: Cargo.toml
rust/wasm_websocket_client/src/: lib.rs
scripts/: smoke-local.sh  test-api-contracts.mjs
src/: App.vue  eventBus.ts  main.ts  store.js  store.ts  style.css  useCookies.ts
src/components/: AppLink.vue  Background.vue  (+22 more)
(+27 files in other folders)
