[package]
name = "wasm_websocket_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
futures = "0.3.29"
futures-util = "0.3.29"
log = "0.4.20"
pharos = "0.5.3"
wasm-bindgen = "0.2.89"
wasm-bindgen-futures = "0.4.39"
wasm-logger = "0.2.0"
ws_stream_wasm = "0.7.4"
